# hotpath-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  justfile
.github/workflows/: build-and-release-samply.yml  ci-macos.yml  ci-windows.yml  ci.yml  hotpath-comment-linux.yml  hotpath-comment-macos.yml  hotpath-profile-linux.yml  hotpath-profile-macos.yml
crates/hotpath/: Cargo.toml
crates/hotpath-backend/: Cargo.toml  deploy.sh  justfile
crates/hotpath-backend/html_src/: assets-manifest.json  book.toml
crates/hotpath-backend/remote/: kill_server.sh  logs.sh  restart.sh
crates/hotpath-backend/src/: auth.rs  config.rs
crates/hotpath-macros/: Cargo.toml
crates/hotpath-macros-meta/: Cargo.toml
crates/hotpath-macros-meta/src/: lib.rs  lib_off.rs  lib_on.rs
crates/hotpath-macros/src/: lib.rs  lib_on.rs
crates/hotpath-meta/: Cargo.toml
crates/hotpath-meta/src/: json.rs  lib.rs  lib_off.rs  lib_on.rs  mcp_server.rs  metrics_server.rs  output.rs  output_on.rs  shared.rs
crates/hotpath/src/: instant.rs  json.rs  lib.rs  lib_off.rs  lib_on.rs  mcp_server.rs  metrics_server.rs  output.rs  output_on.rs  shared.rs
crates/hotpath/tests/: channels_crossbeam.rs  channels_flume.rs  channels_ftc.rs  channels_std.rs  channels_tokio.rs  debug.rs  functions.rs  functions_alloc.rs  functions_cpu.rs  functions_timing.rs  futures.rs  guards.rs  mutex_async_lock.rs  rw_lock_std.rs  streams.rs  threads.rs  tokio_runtime.rs
crates/test-all-features/: Cargo.toml
crates/test-all-features/examples/: all_noop.rs
crates/test-channels-asc/: Cargo.toml
crates/test-channels-asc/examples/: basic_asc.rs  basic_json_asc.rs  closed_asc.rs  console_feed_asc.rs  iter_asc.rs  slow_consumer_asc.rs
crates/test-channels-crossbeam/: Cargo.toml
crates/test-channels-crossbeam/examples/: basic_crossbeam.rs  basic_json_crossbeam.rs  closed_crossbeam.rs  console_feed_crossbeam.rs  iter_crossbeam.rs  slow_consumer_crossbeam.rs
crates/test-channels-flume/: Cargo.toml  README.md
crates/test-channels-flume/examples/: basic_flume.rs  basic_json_flume.rs  closed_flume.rs  console_feed_flume.rs  iter_flume.rs  slow_consumer_flume.rs
crates/test-channels-ftc/: Cargo.toml
crates/test-channels-ftc/examples/: basic_ftc.rs  basic_json_ftc.rs  closed_ftc.rs  console_feed_ftc.rs  iter_ftc.rs  (+2 more)
crates/test-channels-std/: Cargo.toml
crates/test-channels-std/examples/: basic_json_std.rs  basic_std.rs  closed_std.rs  console_feed_std.rs  iter_std.rs  slow_consumer_std.rs  test_macro_order.rs
crates/test-channels-tokio/: Cargo.toml
crates/test-debug/: Cargo.toml
crates/test-futures/: Cargo.toml
crates/test-futures/examples/: basic_futures.rs  benchmark_future.rs  futures_file_output.rs  guard_timeout_futures.rs  iter_futures.rs  measure_future.rs
crates/test-mutex-async-lock/: Cargo.toml
crates/test-mutex-std/: Cargo.toml
crates/test-mutex-tokio/: Cargo.toml
crates/test-rw-lock-async-lock/: Cargo.toml
crates/test-rw-lock-parking-lot/: Cargo.toml
crates/test-rw-lock-parking-lot/examples/: benchmark_rw_lock_parking_lot.rs
crates/test-rw-lock-std/: Cargo.toml
crates/test-rw-lock-tokio/: Cargo.toml
crates/test-smol-async/: Cargo.toml
crates/test-smol-async/examples/: all_guards.rs
crates/test-streams/: Cargo.toml
crates/test-tokio-async/: Cargo.toml
docs/: ssh_demo.md
docs/src/: introduction.md  sponsorship.md  terms.md
scripts/: bench.sh  bench_meta.sh  check_min_versions.sh  compare.sh  compare_meta.sh
(+150 files in other folders)
