[package]
name = "test-channels-asc"
version = "0.0.0"
publish = false
edition = "2021"
description = "Tests for async channels instrumentation."

[dependencies]
async-channel = "2.5.0"
hotpath = { workspace = true, features = ["async-channel"] }
smol = "2.0"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-cpu = ["hotpath/hotpath-cpu"]
hotpath-meta = ["hotpath/hotpath-meta"]
