[package]
name = "test-channels-flume"
version = "0.1.0"
edition = "2021"
publish = false
description = "Tests for flume channels instrumentation."

[dependencies]
hotpath = { workspace = true, features = ["flume"] }
flume= "0.12.0"
smol = "2.0"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-cpu = ["hotpath/hotpath-cpu"]
hotpath-meta = ["hotpath/hotpath-meta"]
hotpath-alloc-meta = ["hotpath/hotpath-alloc-meta"]
