[package]
name = "test-channels-std"
version = "0.0.0"
publish = false
edition = "2021"
description = "Tests for std channels instrumentation."

[dependencies]
hotpath = { workspace = true }

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-cpu = ["hotpath/hotpath-cpu"]
hotpath-meta = ["hotpath/hotpath-meta"]
hotpath-alloc-meta = ["hotpath/hotpath-alloc-meta"]
