[package]
name = "test-futures"
version = "0.0.0"
publish = false
edition = "2021"
description = "Tests for futures instrumentation."

[dependencies]
hotpath = { path = "../hotpath" }
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-cpu = ["hotpath/hotpath-cpu"]
hotpath-meta = ["hotpath/hotpath-meta"]

