[package]
name = "test-smol-async"
version = "0.0.0"
publish = false
edition = "2021"
description = "Integration tests and examples using the smol runtime."

[dependencies]
hotpath = { path = "../hotpath" }
smol = "2.0"

[features]
default = []
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-cpu = ["hotpath/hotpath-cpu"]
hotpath-meta = ["hotpath/hotpath-meta"]
hotpath-alloc-meta = ["hotpath/hotpath-alloc-meta"]
